design: Change descriptions of sequences to match new sequences, change headlines, add graph sequence and description

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -1874,15 +1874,21 @@ Ablauf der Öffnen-Sequenz einer Prolog-Datei, welche durch die Interaktion mit 
 
 Ablauf des Sprachwechsels. Hierbei wird die aktuell gewählte Sprache zu einer anderen implementierten Sprache geändert und die grafische Oberfläche entsprechend aktualisiert.
 
-\subsection{Ausführung eines Interpretationsschritts}
+\subsection{Interpretationsschritt}
 
-Abwicklung eines einzelnen nicht-trivialen Interpretationsschritts im Kontext eines gegebenen Prolog-Programms.
+Ablauf der Ausführung eines allgemeinen Interpretationsschritts.
 
 \subsection{Unifikation}
 
-\subsection{Generierung der Visualisierung}
+Ablauf der Unifikation zweier Funktoren innerhalb eines Interpretationsschritts.
 
-Ablauf der Generierung des Graphen nach einem abgeschlossenen Interpretationsschritt. 
+\subsection{Visualisierung}
+
+Ablauf der Visualisierung nach einem abgeschlossenen Interpretationsschritt. 
+
+\subsection{Graph}
+
+Ablauf der Generierung des Graphen aus dem aktuellen Interpreterzustand in der Visualisierung.
 
 \section{Zustandsdiagramm}
 
